--- a/mainList/templates/mainList/finished.html
+++ b/mainList/templates/mainList/finished.html
@@ -5,12 +5,13 @@
 
             <main class="main">
             <div class="main-wrapper">
-              <h1 class="main-title">{{ title }}</h1>
+              <div class="wrapper_title">
+                <h1 class="main-title">{{ title }}</h1>
+              </div>
               <div class="main-content">
                    {% for itm in dat %}
                   {% if itm.status in viw %}
                 <div class="card-content">
-
                     <div class="card_info">
                         <a class="card_name" href="{{ itm.get_absolute_url }}">
                             {{ itm.name }}
@@ -34,13 +35,13 @@
                                     <p class="info__p">Соревнование завершилось {{ itm.date_end|date:"D d M Y" }} {{ itm.date_end|time:"H:i" }}</p>
                                 {% endif %}
                         <h2 class="info__h2">Описание:</h2>
-                        <h3 class="card_description">
+                        <div class="card_description">
                             {{ itm.description|linebreaks|truncatewords:100 }}
-                        </h3>
+                        </div>
                     </div>
                     <div class="card_img">
                     <a href="{{ itm.get_absolute_url }}"
-                      ><img class="img" src="{{ itm.image }}" alt="Название соревнования"
+                      ><img class="img" src="{{ itm.image }}" alt="{{ itm.name }}"
                     /></a>
                     <a class="button" href="{{ itm.get_absolute_url }}">Подробнее...</a>
                   </div>
