--- a/mainList/static/mainList/css/style.css
+++ b/mainList/static/mainList/css/style.css
@@ -2,8 +2,8 @@ html,
 .body {
   height: 100%;
   box-sizing: border-box;
-  font-family: Consolas, Arial, sans-serif;
-  font-size: 1.2em;
+  font-family: "Montserrat", sans-serif;
+  font-size: 1em;
 }
 .wrapper {
   display: flex;
@@ -28,6 +28,7 @@ html,
 .header-navigation {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   max-width: 1200px;
   width: 100%;
 }
@@ -35,7 +36,6 @@ html,
   display: block;
 }
 .header-navigation__item {
-  margin-top: 10px;
   color: black;
   font-weight: 900;
   font-size: 1.1em;
@@ -79,8 +79,11 @@ html,
 .registr {
   max-width: 600px;
 }
+.wrapper_title{
+    width:100%;
+}
 .main-title {
-  margin: 0 0 10px;
+  margin: 0 0 28px 0;
   font-size: 2em;
   font-weight: 600;
   margin-top: 0;
@@ -101,20 +104,19 @@ html,
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin-top: 20px;
+  padding: 15px 0;
   border-bottom: 3px solid black;
 }
 .card_info {
-  margin-left: 20px;
   display: flex;
   align-items: flex-start;
-  align-content: flex-start;
   flex-direction: column;
+  padding-right: 30px;
 }
 .card_img {
-  margin-right: 20px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
 }
 .img {
@@ -134,7 +136,7 @@ html,
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  width: 95%;
+  width: 100%;
   height: 50px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgb(154, 157, 165);
@@ -142,7 +144,6 @@ html,
   color: rgb(0, 0, 0, 0.8);
   font-weight: 600;
   text-decoration: none;
-  font-style: oblique;
   font-size: 1.25em;
   background: none;
   border: none;
@@ -156,7 +157,6 @@ html,
 .card_name {
   cursor: pointer;
   text-decoration: none;
-  font-style: oblique;
   color: #000;
   font-size: 1.3em;
   font-weight: 900;
@@ -166,16 +166,16 @@ html,
   color: rgb(60, 60, 60, 0.8);
 }
 .info__p {
-  margin: 5px 0 0 10px;
+  margin: 5px 0 0 5px;
 }
 .info__h2 {
   margin: 0;
-  margin-top: 10px;
+  margin-top: 20px;
   font-size: 1.3em;
   font-weight: 600;
 }
 .card_description {
-  margin: 5px 25px 0 15px;
+  margin-left: 5px;
   font-size: 1.4em;
   font-weight: 300;
   text-align: justify;
@@ -190,13 +190,18 @@ html,
 .section {
   width: 100%;
   display: flex;
-  align-items: flex-start;
+  justify-content:space-between;
+}
+.section-org{
+width:100%
 }
 .section-title {
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row;
+  border: 1px solid #dedede;
+  border-radius: 8px;
 }
 .section-title_info {
   display: flex;
@@ -219,7 +224,7 @@ html,
   color: rgb(60, 60, 60, 0.8);
 }
 .section_info {
-  margin: 5px 30px 0 25px;
+  margin: 5px 0 0 5px;
   font-size: 1.4em;
   font-weight: 300;
   text-align: left;
@@ -229,11 +234,66 @@ html,
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
 }
 .ul_organizers {
   list-style: none;
+  padding: 0;
 }
 .ul_organizers li {
   margin-bottom: 10px;
   margin-right: 20px;
+}
+.input_text {
+  max-width: 200px;
+  margin-left: 5px;
+  border: none;
+  outline: none;
+}
+.img_input {
+  width: 30px;
+  height: 18px;
+}
+.reg_form__item {
+  display: flex;
+  align-items: center;
+  border-bottom: 3px solid black;
+  padding-bottom: 5px;
+  padding-top: 5px;
+}
+.item_margin {
+  margin-left: 20px;
+}
+.from_reg {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+}
+.checkbox_item {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  width: 100%;
+}
+.checkbox_p {
+  margin: 0;
+  margin-left: 10px;
+  font-weight: 600;
+  font-style: oblique;
+  color: rgb(0, 0, 0, 0.5);
+}
+.checkbox_h2 {
+  margin: 0;
+  font-size: 1.4em;
+  font-weight: 600;
+}
+.wrapper_party {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  margin-left: 20px;
 }
