--- a/mainList/templates/mainList/base.html
+++ b/mainList/templates/mainList/base.html
@@ -6,14 +6,14 @@
     <title>LIDcode</title>
     <link href="{% static 'mainList/css/style.css' %}" rel="stylesheet">
     <link href="{% static 'mainList/css/cssNormalize.css' %}" rel="stylesheet">
-    <link href="{% static 'mainList/images/logo.svg' %}" rel="shortcut icon" type="image/x-icon">
+    <link href="{% static 'mainList/images/mini-logo.svg' %}" rel="shortcut icon" type="image/x-icon">
 </head>
 <body class="body">
 <div class="wrapper" id="root">
       <header class="header">
         <nav class="header-navigation">
           <a class="header-navigation__logo" href="{% url 'home' %}">
-            <img src="{% static 'mainList/images/logo.svg' %}" alt="Соревнования" width="200" height="30" />
+            <img src="{% static 'mainList/images/logo.png' %}" alt="Соревнования" width="200" height="30" />
           </a>
           <a class="header-navigation__item" href="{% url 'finished' %}">
             Прошедшие соревнования
